# CounselAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.ec2.yml  docker-compose.yml  environment.yml  pyproject.toml  server.py
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-28T21-28-19-596Z.yml  page-2026-04-28T21-29-01-666Z.yml  page-2026-04-28T21-29-13-113Z.yml  page-2026-04-28T21-29-32-802Z.yml  page-2026-04-28T21-29-46-229Z.yml  page-2026-04-28T21-29-59-593Z.yml  page-2026-04-28T21-34-55-999Z.yml  page-2026-04-28T21-35-03-093Z.yml  page-2026-04-28T21-35-22-357Z.yml  page-2026-04-28T21-35-43-511Z.yml
backend/: adapter.py  api.py  auth.py  formatting.py  pipeline.py  prompts.py  settings.py  store.py  usage.py
backend/agents/: __init__.py  defense.py  expert.py  judge.py  plaintiff.py  strategist.py
data/: counselai.sqlite
frontend/: .env.local.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/components/: AgentPanel.tsx  InputCard.tsx  Markdown.tsx  MemoCard.tsx  ScoresCard.tsx  Sidebar.tsx  UserMenu.tsx
frontend/lib/: api.ts  constants.ts
frontend/pages/: _app.tsx  _document.tsx  app.tsx  index.tsx
frontend/styles/: globals.css
ops/: Caddyfile
scripts/: deploy.sh  destroy.sh  start-prod.sh
static/: 404.html  app.html  index.html
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_pipeline.py
ui/: app.py  landing.html  theme.py
(+18 files in other folders)
